Update keyframe format

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -210,6 +210,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import subprocess\n",
+        "import ast\n",
         " \n",
         "sys.path.append('./taming-transformers')\n",
         "\n",
@@ -462,14 +463,19 @@
         "\n",
         "Key Frames\n",
         "\n",
+        "\n",
+        "## Note: this key frame format has changed. The old format will still work.\n",
+        "\n",
         "If `key_frames` is set to True, you are able to change the parameters over the course of the run.\n",
         "To do this, put the parameters in in the following format:\n",
-        "10:(0.5), 20: (1.0), 35: (-1.0)\n",
+        "`10: 0.5, 20: 1.0, 35: -1.0`\n",
         "\n",
         "This means at frame 10, the value should be 0.5, at frame 20 the value should be 1.0, and at frame 35 the value should be -1.0. The value at each other frame will be linearly interpolated (that is, before frame 10, the value will be 0.5, between frame 10 and 20 the value will increase frame-by-frame from 0.5 to 1.0, between frame 20 and 35 the value will decrease frame-by-frame from 1.0 to -1.0, and after frame 35 the value will be -1.0)\n",
         "\n",
-        "This also works for text_prompts, e.g. 10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\n",
+        "This also works for text_prompts, e.g. `'Apple': {10: 1, 20: 0}, 'Orange': {10: 0, 20: 1}, 'Peach': {20: 1}`\n",
         "will start with an Apple value of 1, once it hits frame 10 it will start decreasing in in Apple and increasing in Orange until it hits frame 20. Note that Peach will have a value of 1 the whole time.\n",
+        "\n",
+        "It will also work for target_images, e.g. `'init.jpg': {0: 1, 10: 0}, 'final.jpg': {0: 0, 10: 1}`\n",
         "\n",
         "If `key_frames` is set to True, all of the parameters which can be key-framed must be entered in this format."
       ]
@@ -489,7 +495,7 @@
         "\n",
         "# @markdown New: Want Bézier easing in your animations? Try out https://keyframe-string-generator.glitch.me/ to generate keyframe strings. Want to use an audio file to drive parameters? Try https://audio-keyframe-generator.glitch.me/\n",
         "key_frames = True #@param {type:\"boolean\"}\n",
-        "text_prompts = \"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\" #@param {type:\"string\"}\n",
+        "text_prompts = \"'Apple': {10: 1, 20: 0}, 'Orange': {10: 0, 20: 1}, 'Peach': {20: 1}\" #@param {type:\"string\"}\n",
         "width =  400#@param {type:\"number\"}\n",
         "height =  400#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
@@ -498,11 +504,13 @@
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
         "max_frames = 50#@param {type:\"number\"}\n",
-        "angle = \"10: (0), 30: (10), 50: (0)\"#@param {type:\"string\"}\n",
-        "zoom = \"10: (1), 30: (1.2), 50: (1)\"#@param {type:\"string\"}\n",
-        "translation_x = \"0: (0)\"#@param {type:\"string\"}\n",
-        "translation_y = \"0: (0)\"#@param {type:\"string\"}\n",
-        "iterations_per_frame = \"0: (10)\"#@param {type:\"string\"}\n",
+        "angle = \"10: 0, 30: 1, 50: -1\"#@param {type:\"string\"}\n",
+        "\n",
+        "# @markdown <b>Careful:</b> do not use negative or 0 zoom. If you want to zoom out, use a number between 0 and 1.\n",
+        "zoom = \"10: 1, 30: 1.2, 50: 0.9\"#@param {type:\"string\"}\n",
+        "translation_x = \"0: 0\"#@param {type:\"string\"}\n",
+        "translation_y = \"0: 0\"#@param {type:\"string\"}\n",
+        "iterations_per_frame = \"0: 10\"#@param {type:\"string\"}\n",
         "save_all_iterations = False#@param {type:\"boolean\"}\n",
         "\n",
         "# option -C - skips download if already exists\n",
@@ -565,20 +573,42 @@
         "    >>> parse_key_frames(\"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\", prompt_parser=lambda x: x.lower()))\n",
         "    {10: 'apple: 1| orange: 0', 20: 'apple: 0| orange: 1| peach: 1'}\n",
         "    \"\"\"\n",
-        "    import re\n",
-        "    pattern = r'((?P<frame>[0-9]+):[\\s]*[\\(](?P<param>[\\S\\s]*?)[\\)])'\n",
-        "    frames = dict()\n",
-        "    for match_object in re.finditer(pattern, string):\n",
-        "        frame = int(match_object.groupdict()['frame'])\n",
-        "        param = match_object.groupdict()['param']\n",
-        "        if prompt_parser:\n",
-        "            frames[frame] = prompt_parser(param)\n",
-        "        else:\n",
-        "            frames[frame] = param\n",
         "\n",
-        "    if frames == {} and len(string) != 0:\n",
-        "        raise RuntimeError('Key Frame string not correctly formatted')\n",
-        "    return frames\n",
+        "    try:\n",
+        "        # This is the preferred way, the regex way will eventually be deprecated.\n",
+        "        frames = ast.literal_eval('{' + string + '}')\n",
+        "        if isinstance(frames, set):\n",
+        "            # If user forgot keyframes, just set value of frame 0\n",
+        "            (frame,) = list(frames)\n",
+        "            frames = {0: frame}\n",
+        "        return frames\n",
+        "    except Exception:\n",
+        "        import re\n",
+        "        pattern = r'((?P<frame>[0-9]+):[\\s]*[\\(](?P<param>[\\S\\s]*?)[\\)])'\n",
+        "        frames = dict()\n",
+        "        for match_object in re.finditer(pattern, string):\n",
+        "            frame = int(match_object.groupdict()['frame'])\n",
+        "            param = match_object.groupdict()['param']\n",
+        "            if prompt_parser:\n",
+        "                frames[frame] = prompt_parser(param)\n",
+        "            else:\n",
+        "                frames[frame] = param\n",
+        "\n",
+        "        if frames == {} and len(string) != 0:\n",
+        "            raise RuntimeError('Key Frame string not correctly formatted')\n",
+        "        return frames\n",
+        "\n",
+        "# Defaults, if left empty\n",
+        "if angle == \"\":\n",
+        "    angle = \"0\"\n",
+        "if zoom == \"\":\n",
+        "    zoom = \"1\"\n",
+        "if translation_x == \"\":\n",
+        "    translation_x = \"0\"\n",
+        "if translation_y == \"\":\n",
+        "    translation_y = \"0\"\n",
+        "if iterations_per_frame == \"\":\n",
+        "    iterations_per_frame = \"10\"\n",
         "\n",
         "if key_frames:\n",
         "    parameter_dicts = dict()\n",
@@ -588,26 +618,38 @@
         "    parameter_dicts['translation_y'] = parse_key_frames(translation_y, prompt_parser=float)\n",
         "    parameter_dicts['iterations_per_frame'] = parse_key_frames(iterations_per_frame, prompt_parser=int)\n",
         "\n",
-        "    split_text_prompts = parse_key_frames(text_prompts, prompt_parser=lambda x: x.split('|'))\n",
-        "    for frame, prompt_list in split_text_prompts.items():\n",
-        "        for prompt in prompt_list:\n",
-        "            prompt_key, prompt_value = prompt.split(\":\")\n",
-        "            prompt_key = f'text_prompt: {prompt_key.strip()}'\n",
-        "            prompt_value = prompt_value.strip()\n",
-        "            if prompt_key not in parameter_dicts:\n",
-        "                parameter_dicts[prompt_key] = dict()\n",
-        "            parameter_dicts[prompt_key][frame] = prompt_value\n",
+        "    text_prompts_dict = parse_key_frames(text_prompts)\n",
+        "    if all([isinstance(value, dict) for value in list(text_prompts_dict.values())]):\n",
+        "       for key, value in list(text_prompts_dict.items()):\n",
+        "           parameter_dicts[f'text_prompt: {key}'] = value\n",
+        "    else:\n",
+        "        # Old format\n",
+        "        text_prompts_dict = parse_key_frames(text_prompts, prompt_parser=lambda x: x.split('|'))\n",
+        "        for frame, prompt_list in text_prompts_dict.items():\n",
+        "            for prompt in prompt_list:\n",
+        "                prompt_key, prompt_value = prompt.split(\":\")\n",
+        "                prompt_key = f'text_prompt: {prompt_key.strip()}'\n",
+        "                prompt_value = prompt_value.strip()\n",
+        "                if prompt_key not in parameter_dicts:\n",
+        "                    parameter_dicts[prompt_key] = dict()\n",
+        "                parameter_dicts[prompt_key][frame] = prompt_value\n",
         "\n",
         "\n",
-        "    split_image_prompts = parse_key_frames(target_images, prompt_parser=lambda x: x.split('|'))\n",
-        "    for frame, prompt_list in split_image_prompts.items():\n",
-        "        for prompt in prompt_list:\n",
-        "            prompt_key, prompt_value = prompt.split(\":\")\n",
-        "            prompt_key = f'image_prompt: {prompt_key.strip()}'\n",
-        "            prompt_value = prompt_value.strip()\n",
-        "            if prompt_key not in parameter_dicts:\n",
-        "                parameter_dicts[prompt_key] = dict()\n",
-        "            parameter_dicts[prompt_key][frame] = prompt_value\n",
+        "    image_prompts_dict = parse_key_frames(target_images)\n",
+        "    if all([isinstance(value, dict) for value in list(image_prompts_dict.values())]):\n",
+        "        for key, value in list(image_prompts_dict.items()):\n",
+        "           parameter_dicts[f'image_prompt: {key}'] = value\n",
+        "    else:\n",
+        "        # Old format\n",
+        "        image_prompts_dict = parse_key_frames(target_images, prompt_parser=lambda x: x.split('|'))\n",
+        "        for frame, prompt_list in image_prompts_dict.items():\n",
+        "            for prompt in prompt_list:\n",
+        "                prompt_key, prompt_value = prompt.split(\":\")\n",
+        "                prompt_key = f'image_prompt: {prompt_key.strip()}'\n",
+        "                prompt_value = prompt_value.strip()\n",
+        "                if prompt_key not in parameter_dicts:\n",
+        "                    parameter_dicts[prompt_key] = dict()\n",
+        "                parameter_dicts[prompt_key][frame] = prompt_value\n",
         "\n",
         "\n",
         "def add_inbetweens():\n",
@@ -628,7 +670,7 @@
         "    global iterations_per_frame_series\n",
         "    global model\n",
         "    global args\n",
-        "    def get_inbetweens(key_frames, integer=False):\n",
+        "    def get_inbetweens(key_frames_dict, integer=False):\n",
         "        \"\"\"Given a dict with frame numbers as keys and a parameter value as values,\n",
         "        return a pandas Series containing the value of the parameter at every frame from 0 to max_frames.\n",
         "        Any values not provided in the input dict are calculated by linear interpolation between\n",
@@ -639,7 +681,7 @@
         "\n",
         "        Parameters\n",
         "        ----------\n",
-        "        key_frames: dict\n",
+        "        key_frames_dict: dict\n",
         "            A dict with integer frame numbers as keys and numerical values of a particular parameter as values.\n",
         "        integer: Bool, optional\n",
         "            If True, the values of the output series are converted to integers.\n",
@@ -670,7 +712,7 @@
         "        dtype: int64\n",
         "        \"\"\"\n",
         "        key_frame_series = pd.Series([np.nan for a in range(max_frames)])\n",
-        "        for i, value in key_frames.items():\n",
+        "        for i, value in key_frames_dict.items():\n",
         "            key_frame_series[i] = value\n",
         "        key_frame_series = key_frame_series.astype(float)\n",
         "        key_frame_series = key_frame_series.interpolate(limit_direction='both')\n",
@@ -748,6 +790,14 @@
         "            )\n",
         "            zoom = f\"0: ({zoom})\"\n",
         "            zoom_series = get_inbetweens(parse_key_frames(zoom))\n",
+        "        for i, zoom in enumerate(zoom_series):\n",
+        "            if zoom <= 0:\n",
+        "                print(\n",
+        "                    f\"WARNING: You have selected a zoom of {zoom} at frame {i}. \"\n",
+        "                    \"This is meaningless. \"\n",
+        "                    \"If you want to zoom out, use a value between 0 and 1. \"\n",
+        "                    \"If you want no zoom, use a value of 1.\"\n",
+        "                )\n",
         "\n",
         "        try:\n",
         "            translation_x_series = get_inbetweens(parameter_dicts['translation_x'])\n",
@@ -810,6 +860,13 @@
         "        translation_x = float(translation_x)\n",
         "        translation_y = float(translation_y)\n",
         "        iterations_per_frame = int(iterations_per_frame)\n",
+        "        if zoom <= 0:\n",
+        "            print(\n",
+        "                f\"WARNING: You have selected a zoom of {zoom}. \"\n",
+        "                \"This is meaningless. \"\n",
+        "                \"If you want to zoom out, use a value between 0 and 1. \"\n",
+        "                \"If you want no zoom, use a value of 1.\"\n",
+        "            )\n",
         "\n",
         "    args = argparse.Namespace(\n",
         "        prompts=text_prompts,\n",
@@ -1235,7 +1292,7 @@
         "# @markdown You can copy and paste this cell multiple times to edit as many animation curves as you need.\n",
         "\n",
         "\n",
-        "parameter = \"text_prompts: Apple\" #@param [\"angle\", \"zoom\", \"translation_x\", \"translation_y\", \"iterations_per_frame\", \"text_prompt: ENTER HERE\"] {allow-input: true}\n",
+        "parameter = \"text_prompt: Apple\" #@param [\"angle\", \"zoom\", \"translation_x\", \"translation_y\", \"iterations_per_frame\", \"text_prompt: ENTER HERE\"] {allow-input: true}\n",
         "ymin =  -1#@param {type:\"number\"}\n",
         "ymax =  2#@param {type:\"number\"}\n",
         "xmin = 0\n",
@@ -1580,7 +1637,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1iwOrcDbtndh"
+        "id": "1iwOrcDbtndh",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -1639,7 +1697,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mFo5vz0UYBrF"
+        "id": "mFo5vz0UYBrF",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -1707,7 +1766,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "E8lvN6b0mb-b"
+        "id": "E8lvN6b0mb-b",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
