Print incorrect keyframe string

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -595,7 +595,7 @@
         "                frames[frame] = param\n",
         "\n",
         "        if frames == {} and len(string) != 0:\n",
-        "            raise RuntimeError('Key Frame string not correctly formatted')\n",
+        "            raise RuntimeError(f'Key Frame string not correctly formatted: {string}')\n",
         "        return frames\n",
         "\n",
         "# Defaults, if left empty\n",
