Make restarting with just video frames easier

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -925,23 +925,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "collapsed": true,
-        "id": "-qAWbJ-_ctkl"
-      },
-      "outputs": [],
-      "source": [
-        "if key_frames:\n",
-        "    # key frame filename would be too long\n",
-        "    filename = \"video.mp4\"\n",
-        "else:\n",
-        "    filename = f\"{'_'.join(text_prompts).replace(' ', '')}.mp4\"\n",
-        "filepath = f'{working_dir}/{filename}'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "g7EDme5RYCrt",
         "cellView": "form"
       },
@@ -1267,7 +1250,9 @@
       "source": [
         "## Make a video of the results\n",
         "\n",
-        "To generate a video with the frames, run the cell below. You can modify the number of FPS, the initial frame, the last frame, etc."
+        "To generate a video with the frames, run the cell below. You can modify the number of FPS, the initial frame, the last frame, etc.\n",
+        "\n",
+        "This step may fail due to an out-of-memory error."
       ]
     },
     {
@@ -1283,9 +1268,24 @@
         "# import subprocess in case this cell is run without the above cells\n",
         "import subprocess\n",
         "\n",
+        "# Try to avoid OOM errors\n",
+        "torch.cuda.empty_cache()\n",
+        "\n",
         "init_frame = 1#@param {type:\"number\"} This is the frame where the video will start\n",
         "last_frame = i#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
         "fps = 12#@param {type:\"number\"}\n",
+        "\n",
+        "try:\n",
+        "    key_frames\n",
+        "except NameError:\n",
+        "    filename = \"video.mp4\"\n",
+        "else:\n",
+        "    if key_frames:\n",
+        "        # key frame filename would be too long\n",
+        "        filename = \"video.mp4\"\n",
+        "    else:\n",
+        "        filename = f\"{'_'.join(text_prompts).replace(' ', '')}.mp4\"\n",
+        "filepath = f'{working_dir}/{filename}'\n",
         "\n",
         "frames = []\n",
         "# tqdm.write('Generating video...')\n",
@@ -1328,10 +1328,8 @@
         "    print(stderr)\n",
         "    print(\n",
         "        \"You may be able to avoid this error by backing up the frames,\"\n",
-        "        \"restarting the notebook, and running only the video synthesis cells,\"\n",
+        "        \"restarting the notebook, and running only the google drive/local connection and video synthesis cells,\"\n",
         "        \"or by decreasing the resolution of the image generation steps. \"\n",
-        "        \"If you restart the notebook, you will have to define the `filepath` manually\"\n",
-        "        \"by adding `filepath = 'PATH_TO_THE_VIDEO'` to the beginning of this cell. \"\n",
         "        \"If these steps do not work, please post the traceback in the github.\"\n",
         "    )\n",
         "    raise RuntimeError(stderr)\n",
