Possible fix for A100

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -168,6 +168,23 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#@title Setup for A100\n",
+        "#@markdown Running this cell might fix the problem with A100 GPUs being extremely slow. (untested)\n",
+        "if gpu.name.startswith('A100'):\n",
+        "  torch.backends.cudnn.enabled = False\n",
+        "  print('Finished setup for A100')\n",
+        "  "
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "shHiUQlarnou"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "cellView": "form",
