--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -163,7 +163,8 @@
         "\n",
         "#@markdown ---\n",
         "\n",
-        "!nvidia-smi -L"
+        "gpu, = !nvidia-smi -L\n",
+        "print(gpu)"
       ]
     },
     {
@@ -171,7 +172,7 @@
       "source": [
         "#@title Setup for A100\n",
         "#@markdown Running this cell might fix the problem with A100 GPUs being extremely slow. (untested)\n",
-        "if gpu.name.startswith('A100'):\n",
+        "if 'A100' in gpu:\n",
         "  torch.backends.cudnn.enabled = False\n",
         "  print('Finished setup for A100')\n",
         "  "
