Hide unnecessary cells

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -10,31 +10,66 @@
         "\n",
         "This notebook allows you to create animations by providing text phrases, which are used by an AI to synthesise frames. You can provide values for how much each text phrase should be weighted, and how much zoom, pan, and translation there should be at each keyframe.\n",
         "\n",
-        "## Credits\n",
-        "The VQGAN+CLIP (z+quantize method) notebook this was based on is by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated into Spanish and added explanations, and modifications by Eleiber#8347, and the friendly interface was made thanks to Abulafia#3734. Translated back into English, and zoom, pan, rotation, and keyframes features by Chigozie Nri (https://github.com/chigozienri, https://twitter.com/chigozienri). Some UI improvements were made by Justin John (https://github.com/justinjohn0306). A linked helper spreadsheet for creating parameter strings is by Kendrick Feller (https://twitter.com/EphemeralInc)\n",
-        "\n",
-        "<h2>Donation Link</h2>\n",
-        "\n",
         "If you want, you can donate to support me at <a href=\"https://ko-fi.com/chigozie\">ko-fi</a>. No pressure (but I'd love to know if you create something cool, or just had fun!).\n",
         "\n",
-        "<a href='https://ko-fi.com/chigozie' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>\n",
-        "\n",
-        "<h2>Can I make NFTs?</h2>\n",
-        "\n",
-        "If you must. If you do, consider using a low-energy blockchain such as Tezos, rather than Ethereum.\n",
-        "\n",
-        "<h2>Too complicated? Want more?</h2>\n",
-        "\n",
-        "If you want a custom animation, features not included here, or anything else, let me know. I might be up for accepting a commission!"
+        "<a href='https://ko-fi.com/chigozie' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "TCFJBIluOmXp"
-      },
       "source": [
-        "# Troubleshooting\n",
+        "## Credits"
+      ],
+      "metadata": {
+        "id": "ENzCpi9n2Ige"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The VQGAN+CLIP (z+quantize method) notebook this was based on is by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated into Spanish and added explanations, and modifications by Eleiber#8347, and the friendly interface was made thanks to Abulafia#3734. Translated back into English, and zoom, pan, rotation, and keyframes features by Chigozie Nri (https://github.com/chigozienri, https://twitter.com/chigozienri). Some UI improvements were made by Justin John (https://github.com/justinjohn0306). A linked helper spreadsheet for creating parameter strings is by Kendrick Feller (https://twitter.com/EphemeralInc)"
+      ],
+      "metadata": {
+        "id": "CJ3-5BCd2CY9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## FAQ"
+      ],
+      "metadata": {
+        "id": "I83c2cIG2lTL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "### Can I make NFTs?\n",
+        "\n",
+        "If you must. If you do, consider using a low-energy blockchain such as Tezos, rather than Ethereum.\n",
+        "\n",
+        "### Too complicated? Want more?\n",
+        "\n",
+        "If you want a custom animation, features not included here, or anything else, let me know. I might be up for accepting a commission!"
+      ],
+      "metadata": {
+        "id": "naR-4Vd12oh1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Troubleshooting"
+      ],
+      "metadata": {
+        "id": "swcgr4KY3jff"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "The most common cause of problems is trying to use a resolution that's too high, which uses up too much memory. Unfortunately the amount of memory Google Colab gives is variable depending on the session, so I can't give an exact figure for how high a resolution you can use. If you are having problems though, try reducing the resolution to 400x400 px, and increasing from there.\n",
         "Two gotchas:\n",
         "1. if you use an input image, this overwrites the resolution you specify.\n",
@@ -42,10 +77,53 @@
         "\n",
         "If you still have problems, then:\n",
         "\n",
-        "# Reporting problems\n",
+        "### Reporting problems\n",
         "Submit bug reports or feature requests at https://github.com/chigozienri/VQGAN-CLIP-animations/issues\n",
         "or ask me for help on Twitter at https://twitter.com/chigozienri"
-      ]
+      ],
+      "metadata": {
+        "id": "9E_i--EF3mdi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## License"
+      ],
+      "metadata": {
+        "id": "Mj44SN_84GCl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "This software is licensed under the MIT license\n",
+        "\n",
+        "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+        "of this software and associated documentation files (the \"Software\"), to deal\n",
+        "in the Software without restriction, including without limitation the rights\n",
+        "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+        "copies of the Software, and to permit persons to whom the Software is\n",
+        "furnished to do so, subject to the following conditions:\n",
+        "\n",
+        "The above copyright notice and this permission notice shall be included in\n",
+        "all copies or substantial portions of the Software.\n",
+        "\n",
+        "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+        "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+        "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+        "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+        "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+        "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\n",
+        "THE SOFTWARE.\n",
+        "\n",
+        "The original notebook upon which this is based is \n",
+        "Copyright (c) 2021 Katherine Crowson"
+      ],
+      "metadata": {
+        "id": "fD0e7LXv4OJ9"
+      }
     },
     {
       "cell_type": "markdown",
@@ -68,69 +146,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "N3vV_Mq292w-"
-      },
       "source": [
-        "# Load Google Drive\n",
-        "\n",
-        "Long-running colab notebooks might halt, and discard all progress. For this reason, it's useful (although optional) to save the images as they are produced in your personal google drive. Run the cell below to load google drive, click the link, sign in, paste the code generated into the prompt, and press enter. If you choose not to use google drive, uncheck the box below, but you should still run the cell"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+        "# 1. Setup"
+      ],
       "metadata": {
-        "cellView": "form",
-        "collapsed": true,
-        "id": "wOSNC5SwHBry"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown #**Run me**: Choose google drive or local connection \n",
-        "from google.colab import drive\n",
-        "\n",
-        "google_drive = False #@param {type:\"boolean\"}\n",
-        "\n",
-        "if google_drive:\n",
-        "    drive.mount('/content/gdrive')\n",
-        "    working_dir = '/content/gdrive/MyDrive/vqgan'\n",
-        "else:\n",
-        "    working_dir = '/content'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "collapsed": true,
-        "id": "VA1PHoJrRiK9"
-      },
-      "outputs": [],
-      "source": [
-        "# @title Licensed under the MIT License\n",
-        "\n",
-        "# Copyright (c) 2021 Katherine Crowson\n",
-        "\n",
-        "# Permission is hereby granted, free of charge, to any person obtaining a copy\n",
-        "# of this software and associated documentation files (the \"Software\"), to deal\n",
-        "# in the Software without restriction, including without limitation the rights\n",
-        "# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
-        "# copies of the Software, and to permit persons to whom the Software is\n",
-        "# furnished to do so, subject to the following conditions:\n",
-        "\n",
-        "# The above copyright notice and this permission notice shall be included in\n",
-        "# all copies or substantial portions of the Software.\n",
-        "\n",
-        "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
-        "# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
-        "# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
-        "# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
-        "# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
-        "# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\n",
-        "# THE SOFTWARE."
-      ]
+        "id": "KIt3MXPA5UJu"
+      }
     },
     {
       "cell_type": "code",
@@ -141,7 +162,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown #**Check GPU type**\n",
+        "#@markdown ##1.1 Check GPU type\n",
         "#@markdown ### Factory reset runtime if you don't have the desired GPU.\n",
         "\n",
         "#@markdown ---\n",
@@ -170,7 +191,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Setup for A100\n",
+        "#@title 1.1.2 Additional setup for A100\n",
         "#@markdown Running this cell might fix the problem with A100 GPUs being extremely slow. (untested)\n",
         "if 'A100' in gpu:\n",
         "  torch.backends.cudnn.enabled = False\n",
@@ -190,11 +211,36 @@
       "metadata": {
         "cellView": "form",
         "collapsed": true,
+        "id": "wOSNC5SwHBry"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown # 1.2 Prepare Folders\n",
+        "\n",
+        "#@markdown Long-running colab notebooks might halt, and discard all progress. For this reason, it's useful (although optional) to save the images as they are produced in your personal google drive. Run the cell below to load google drive, click the link, sign in, paste the code generated into the prompt, and press enter. If you choose not to use google drive, uncheck the box below, but you should still run the cell.\n",
+        "\n",
+        "from google.colab import drive\n",
+        "\n",
+        "google_drive = True #@param {type:\"boolean\"}\n",
+        "\n",
+        "if google_drive:\n",
+        "    drive.mount('/content/gdrive')\n",
+        "    working_dir = '/content/gdrive/MyDrive/vqgan'\n",
+        "else:\n",
+        "    working_dir = '/content'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "collapsed": true,
         "id": "EXMSuW2EQWsd"
       },
       "outputs": [],
       "source": [
-        "#@markdown #**Run me**: Installation and loading of libraries and definitions\n",
+        "#@markdown # 1.3 Install and load libraries and definitions\n",
         "# @markdown This cell will take a while because you have to download multiple libraries\n",
         "\n",
         "print(\"Downloading CLIP...\")\n",
@@ -424,12 +470,28 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# 2. Model settings"
+      ],
+      "metadata": {
+        "id": "uhYu7Y5X7Kaz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Instructions for setting parameters"
+      ],
+      "metadata": {
+        "id": "80d6iNNM7UV2"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "1tthw0YaispD"
       },
       "source": [
-        "## Instructions for setting parameters:\n",
-        "\n",
         "If you want to create an animation with lots of keyframes, try out this spreadsheet by @EphemeralInc for constructing the strings: https://docs.google.com/spreadsheets/d/1sJ0PMHUPIYkS7LSxhzTThEP7rZ5CFonz-dBxqe8F2uc.\n",
         "\n",
         "You can also try https://keyframe-string-generator.glitch.me/ or https://audio-keyframe-generator.glitch.me/ to construct strings using a visual editor, or an audio file.\n",
@@ -482,7 +544,7 @@
         "Key Frames\n",
         "\n",
         "\n",
-        "## Note: this key frame format has changed. The old format will still work.\n",
+        "* Note: this key frame format has changed. The old format will still work. *\n",
         "\n",
         "If `key_frames` is set to True, you are able to change the parameters over the course of the run.\n",
         "To do this, put the parameters in in the following format:\n",
@@ -499,6 +561,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 2.1 Change parameters"
+      ],
+      "metadata": {
+        "id": "s2sl2u2z7h_k"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -508,7 +579,6 @@
       },
       "outputs": [],
       "source": [
-        "#@title Parameters\n",
         "# @markdown The first time you run this cell with a given model selected, it will take a while because it will download the model. After that, if you change parameters, it won't take as long.\n",
         "\n",
         "# @markdown New: Want Bézier easing in your animations? Try out https://keyframe-string-generator.glitch.me/ to generate keyframe strings. Want to use an audio file to drive parameters? Try https://audio-keyframe-generator.glitch.me/\n",
@@ -524,7 +594,7 @@
         "max_frames = 50#@param {type:\"number\"}\n",
         "angle = \"10: 0, 30: 1, 50: -1\"#@param {type:\"string\"}\n",
         "\n",
-        "# @markdown <b>Careful:</b> do not use negative or 0 zoom. If you want to zoom out, use a number between 0 and 1.\n",
+        "#@markdown <b>Careful:</b> `zoom` is a multiplier of dimensions, so 1 is no zoom. Do not use negative or 0 `zoom`. If you want to zoom out, use a number between 0 and 1.\n",
         "zoom = \"10: 1, 30: 1.2, 50: 0.9\"#@param {type:\"string\"}\n",
         "translation_x = \"0: 0\"#@param {type:\"string\"}\n",
         "translation_y = \"0: 0\"#@param {type:\"string\"}\n",
@@ -918,10 +988,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# 3. Generate Frames"
+      ],
+      "metadata": {
+        "id": "f9J2g8jN79yG"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "TV_lYFXeAulw"
       },
       "source": [
+        "## 3.1 Remove previous runs\n",
         "The following cell deletes any frames already in the steps directory. Make sure you have saved any frames you want to keep from previous runs"
       ]
     },
@@ -940,6 +1020,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 3.2 Run!"
+      ],
+      "metadata": {
+        "id": "wR5UGTwt8Nwa"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -949,7 +1038,6 @@
       "outputs": [],
       "source": [
         "#@title Actually do the run...\n",
-        "\n",
         "# Delete memory from previous runs\n",
         "!nvidia-smi -caa\n",
         "for var in ['device', 'model', 'perceptor', 'z']:\n",
@@ -1192,11 +1280,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# 4. Post-processing"
+      ],
+      "metadata": {
+        "id": "Q4THDfFg9NL4"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "YIsSFgtPw0Pc"
       },
       "source": [
-        "# Optional: SRCNN for increasing resolution"
+        "## 4.1 Optional: SRCNN for increasing resolution"
       ]
     },
     {
@@ -1266,7 +1363,7 @@
         "id": "02ZbcWw5YYnU"
       },
       "source": [
-        "## Make a video of the results\n",
+        "## 4.2 Make a video of the results\n",
         "\n",
         "To generate a video with the frames, run the cell below. You can modify the number of FPS, the initial frame, the last frame, etc.\n",
         "\n",
@@ -1397,7 +1494,7 @@
         "id": "g_0Gyi3E0HLW"
       },
       "source": [
-        "# Optional: Super-Slomo for smoothing movement\n",
+        "## 4.3 Optional: Super-Slomo for smoothing movement\n",
         "\n",
         "This step might run out of memory if you run it right after the steps above. If it does, restart the notebook, upload a saved copy of the video from the previous step (or get it from google drive) and define the variable `filepath` with the path to the video before running the cells below again"
       ]
