Manually hide collapsed sections

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -21,7 +21,7 @@
         "## Credits"
       ],
       "metadata": {
-        "id": "ENzCpi9n2Ige"
+        "id": "Credits"
       }
     },
     {
@@ -39,7 +39,7 @@
         "## FAQ"
       ],
       "metadata": {
-        "id": "I83c2cIG2lTL"
+        "id": "FAQ"
       }
     },
     {
@@ -64,7 +64,7 @@
         "## Troubleshooting"
       ],
       "metadata": {
-        "id": "swcgr4KY3jff"
+        "id": "Troubleshooting"
       }
     },
     {
@@ -91,7 +91,7 @@
         "## License"
       ],
       "metadata": {
-        "id": "Mj44SN_84GCl"
+        "id": "License"
       }
     },
     {
@@ -150,7 +150,7 @@
         "# 1. Setup"
       ],
       "metadata": {
-        "id": "KIt3MXPA5UJu"
+        "id": "Setup"
       }
     },
     {
@@ -483,7 +483,7 @@
         "## Instructions for setting parameters"
       ],
       "metadata": {
-        "id": "80d6iNNM7UV2"
+        "id": "Instructions"
       }
     },
     {
@@ -1010,7 +1010,7 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "ksH-eM4pZBdP"
+        "id": "Remove"
       },
       "outputs": [],
       "source": [
@@ -1628,11 +1628,10 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
+      "collapsed_sections": ["Credits", "FAQ", "Troubleshooting", "License", "Setup", "Instructions", "Remove"],
       "machine_shape": "hm",
-      "name": "Zooming VQGAN+CLIP animations",
-      "provenance": [],
-      "private_outputs": true
+      "name": "VQGAN-CLIP-animations.ipynb",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
